// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "login": false,
  "loginKc": false,
  "notifications": false,
}
`;

exports[`2- toggleLoginAct 1`] = `
Object {
  "login": true,
  "loginKc": false,
  "notifications": false,
}
`;

exports[`4- toggleLoginAct 1`] = `
Object {
  "login": false,
  "loginKc": false,
  "notifications": false,
}
`;

exports[`5- toggleNotificationsAct 1`] = `
Object {
  "login": false,
  "loginKc": false,
  "notifications": true,
}
`;
